Fix product swipper at fabric selection mobile

--- a/src/pages/ProductDetail/ProductDetailMobile/FabricSelection/FabricSelection.scss
+++ b/src/pages/ProductDetail/ProductDetailMobile/FabricSelection/FabricSelection.scss
@@ -125,7 +125,7 @@
                 height: 87.5vw;
                 left: 0;
                 top: 0;
-                color: white;
+                background-color: #ff6d3b;
                 font-size: 70px;
                 font-weight: bold;
                 border-radius: 10px;
@@ -134,13 +134,71 @@
                 align-items: center;
                 justify-content: center;
                 transition: transform 350ms ease;
-            }
-            img {
-                border-radius: 10px;
-            }
-            #slider label img {
-                height: 100%;
-                width: 100%;
+                img {
+                    height: 100%;
+                    width: 100%;
+                    border-radius: 10px;
+                }
+                // CSS for spinner
+                .lds-heart {
+                    display: inline-block;
+                    position: relative;
+                    width: 80px;
+                    height: 80px;
+                    transform: rotate(45deg);
+                    transform-origin: 40px 40px;
+                }
+                .lds-heart div {
+                    top: 32px;
+                    left: 32px;
+                    position: absolute;
+                    width: 32px;
+                    height: 32px;
+                    background: #fff;
+                    animation: lds-heart 1.2s infinite
+                        cubic-bezier(0.215, 0.61, 0.355, 1);
+                }
+                .lds-heart div:after,
+                .lds-heart div:before {
+                    content: " ";
+                    position: absolute;
+                    display: block;
+                    width: 32px;
+                    height: 32px;
+                    background: #fff;
+                }
+                .lds-heart div:before {
+                    left: -24px;
+                    border-radius: 50% 0 0 50%;
+                }
+                .lds-heart div:after {
+                    top: -24px;
+                    border-radius: 50% 50% 0 0;
+                }
+                @keyframes lds-heart {
+                    0% {
+                        transform: scale(0.95);
+                    }
+                    5% {
+                        transform: scale(1.1);
+                    }
+                    39% {
+                        transform: scale(0.85);
+                    }
+                    45% {
+                        transform: scale(1);
+                    }
+                    60% {
+                        transform: scale(0.95);
+                    }
+                    100% {
+                        transform: scale(0.9);
+                    }
+                }
+                // End for spinner
+                .unvisible {
+                    display: none !important;
+                }
             }
 
             #slide1 {
